Issue #1: Fix lines rendering wrong when scrolling or when content overflow occurs

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     height: 100vh;
     width: 100%;
     background: black;
@@ -13,7 +13,7 @@ body {
     background: radial-gradient(circle at bottom, rgb(120 113 139) 0%, rgba(51, 51, 51, 1) 90%);
     color: var(--main-street-mist);
     font-family: Arial, Helvetica, sans-serif;
-    /* overflow: hidden; TODO: Handle content overflow better than this */
+    scrollbar-width: none;
 }
 
 h1, h2, h3 {
@@ -157,6 +157,7 @@ button#show-all-lines-toggle.toggled-on::before {
     justify-content: space-evenly;
     align-items: stretch;
     overflow: auto;
+    scrollbar-width: none;
 }
 
 /* #renderer.active button.clear-view, */
@@ -227,6 +228,10 @@ button#show-all-lines-toggle.toggled-on::before {
 
 .semester .course:first-of-type {
     margin-top: var(--course-vertical-spacing);
+}
+
+.semester .course:last-of-type {
+    margin-bottom: 0; /* Prevent margin box causing content overflow */
 }
 
 .prereq-shown {
